SDT-1023 Fix spacing of Account Menu on IE9 to IE11

--- a/src/components/hmrc-account-menu/_account-menu.scss
+++ b/src/components/hmrc-account-menu/_account-menu.scss
@@ -153,12 +153,11 @@ $hmrc-transition-type: "all";
 
 .hmrc-account-menu__main {
   z-index: 995;
-  margin: initial;
+  margin: 0;
   float: right;
 
   li {
     display: inline-block;
-    margin: initial;
     margin-bottom: 0;
   }
 }
